--- a/src/main/resources/templates/customer/support.html
+++ b/src/main/resources/templates/customer/support.html
@@ -40,7 +40,7 @@
   <!-- Footer Fragment Include -->
   <div th:replace="~{common/footer}"></div>
 
-  <script src="/static/js/customer/support.js"></script>
+  <script src="/js/customer/support.js"></script>
 </body>
 
 </html>
