--- a/src/main/resources/static/css/admin/sales.css
+++ b/src/main/resources/static/css/admin/sales.css
@@ -61,12 +61,17 @@ html, body {
   border-radius: 25px;
 }
 
-.content-box{
+.content-box {
   display: flex;
   flex-direction: row;
-  align-items: start;
-  
+  align-items: stretch;
+  gap: 20px;
+  width: 100%; 
+  min-height: 100vh;
+  height: 100%;
+  overflow-x: hidden;
 }
+
 
 /* 사이드바 css입니당 */
 .sideBar {
@@ -120,10 +125,339 @@ html, body {
   display: block;
 }
 
-.content{
+
+
+
+
+/* 드롭다운 필터 css */
+.content {
+  flex-grow: 1; 
   display: flex;
   flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  background-color: #efefef;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  min-width: 0; 
+  max-width: 100%;
 }
+
+
+.title{
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
+
+.btn-container{
+  width: 1200px;
+  height: 50px;
+  margin-left: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+}
+
+.btn-container > button{
+  width: 80px; 
+  height: 35px; 
+  border: 1px solid #a7a7a7; 
+  border-radius: 5px;
+  background-color: #EFEFEF;
+  color: #a7a7a7;
+  font-weight: 200;
+  font-size: 14px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.btn-container > button.active {
+  border: 1px solid black;
+  color: black;
+}
+
+.btn-container > input{
+  width: 170px;
+  height: 40px;
+  border-radius: 5px;
+  font-weight: 150px;
+  font-size: larger;
+  padding: 5px;
+}
+
+
+.sort-dropdown {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#sortSelect {
+  border: 1px solid rgb(37, 37, 37);
+  border-radius: 4px;
+  background-color: #f5f5f5;
+  font-weight: 600;
+  color: rgb(37, 37, 37);
+  padding: 12px;
+  width: 200px;
+  text-align: left;
+  cursor: pointer;
+  font-size: 20px;
+  appearance: none; 
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%23000000" height="10" viewBox="0 0 24 24" width="10" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 12px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+#sortSelect:hover,
+#sortSelect:focus {
+  border-color: #007bff;
+  box-shadow: 0 2px 6px rgba(0, 123, 255, 0.2);
+}
+
+#sortSelect option {
+  font-size: 15px;
+  color: rgb(37, 37, 37);
+}
+
+
+#termSelect {
+  border: 1px solid rgb(37, 37, 37);
+  border-radius: 4px;
+  background-color: #f5f5f5;
+  font-weight: 400;
+  color: rgb(37, 37, 37);
+  padding: 12px;
+  width: 200px;
+  text-align: left;
+  cursor: pointer;
+  font-size: 15px;
+  appearance: none; 
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%23000000" height="10" viewBox="0 0 24 24" width="10" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 12px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.btn-container.hidden, .date.hidden {
+  visibility: hidden; 
+  pointer-events: none;
+}
+
+
+
+/* 날짜 선택 필터 css */
+.date{
+  width: 1500px;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.date > button, input {
+  height: 40px;
+  margin-right: 20px;
+}
+
+
+.sales{
+  font-size: 25px;
+  font-weight: bold;
+  display: flex;
+  gap: 155px;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100px;
+}
+
+.sales > div{
+  text-align: left;
+  width: 250px;
+  min-width: 250px;
+}
+
+
+
+.content-box2{
+  display: flex;
+  justify-content: row;
+  height: 700px;
+}
+
+.graph{
+  width: 1000px;
+  height: 550px;
+}
+
+.salesRank{
+  width: 500px;
+  height: 550px;
+}
+
+.salesRank > table{
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.sales-table{
+  width: 500px;
+  height: 520px;
+}
+
+.sales-title {
+  font-size: 15px; 
+  font-weight: lighter;
+  color: gray;
+}
+
+.sales-count {
+  font-size: 38px;
+  font-weight: bold;
+  display: block;
+}
+
+
+
+#listName{
+  font-size: 20px;
+  font-weight: 600;
+}
+
+
+/* 테이블 스타일 */
+.memberList{
+  margin-right: 100px;
+}
+
+
+.member-table {
+  width: 700px;
+  table-layout: fixed;
+  border-collapse: collapse;
+  margin-top: 20px;
+  background-color: #EFEFEF;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+
+
+.member-table th {
+  padding: 12px 15px;
+  text-align: center;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 300; 
+  color: #fff; 
+  background-color: #EFEFEF;
+}
+
+.member-table th:nth-child(1),
+.member-table th:nth-child(2),
+.member-table th:nth-child(3),
+.member-table th:nth-child(4),
+.member-table th:nth-child(5) {
+  background-color: #205375;
+}
+
+.member-table td {
+  padding: 12px 15px;
+  text-align: center;
+  font-size: 14px;
+  color: rgb(29, 30, 57); 
+  background-color: #EFEFEF;
+}
+
+.member-table tr{
+  height: 40px;
+}
+
+.member-table tr:nth-child(even) td {
+  background-color: #ffffff;
+}
+
+
+
+.member-table tr:hover td {
+  background-color: #a3a2a2;
+}
+
+
+.member-table button {
+  background-color: #205375; 
+  color: #fff;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 12px;
+  transition: background-color 0.3s ease;
+}
+
+.member-table button:hover {
+  background-color: rgb(29, 30, 57);
+}
+
+/* 페이지네이션 스타일 */
+.pagination-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px; 
+  padding: 10px 0;
+  background-color: #EFEFEF;
+}
+
+.pagination {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 10px; 
+}
+
+.pagination a {
+  display: block;
+  padding: 8px 12px;
+  text-decoration: none;
+  background-color: #205375;
+  color: #fff; 
+  border-radius: 4px; 
+  font-size: 14px;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+
+.pagination a:hover {
+  background-color: rgb(29, 30, 57); 
+  cursor: pointer; 
+}
+
+.pagination a.current {
+  background-color: #205375;
+  font-weight: bold; 
+  cursor: pointer; 
+}
+
+
+
+
+
 
 .date{
   width: 1500px;
@@ -148,10 +482,15 @@ html, body {
   justify-content: space-around;
 }
 
-.content-box{
+.content-box {
   display: flex;
-  justify-content: row;
-  height: 700px;
+  flex-direction: row;
+  align-items: stretch;
+  gap: 20px;
+  width: 100%; 
+  min-height: 100vh;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 .graph{
@@ -173,3 +512,115 @@ html, body {
   width: 500px;
   height: 520px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 날짜 선택 css */
+.date > button{
+  width: 80px; 
+  height: 35px; 
+  border: 1px solid #a7a7a7; 
+  border-radius: 5px;
+  background-color: #EFEFEF;
+  color: #a7a7a7;
+  font-weight: 200;
+  font-size: 14px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.date > button.active {
+  border: 1px solid black;
+  color: black;
+}
+
+.date > input{
+  width: 170px;
+  height: 40px;
+  border-radius: 5px;
+  font-weight: 150px;
+  font-size: larger;
+  padding: 5px;
+}
+
+
+
+
+
+
+
+input[type="date"] {
+  font-family: 'Pretendard-Regular', sans-serif;
+  font-size: 14px;
+  padding: 10px 15px;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  background: linear-gradient(#fff, #fff) padding-box,
+              linear-gradient(90deg, #205375, rgb(29,30,57)) border-box;
+  color: #333;
+  outline: none;
+  transition: box-shadow 0.3s ease, border-color 0.3s ease;
+}
+
+input[type="date"]:hover {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+input[type="date"]:focus {
+  box-shadow: 0 0 10px #333;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  color: #333;
+  cursor: pointer;
+}
+
+
+
+
+.sales{
+  font-size: 25px;
+  font-weight: bold;
+  display: flex;
+  gap: 155px;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100px;
+}
+
+.sales > div{
+  text-align: left;
+  width: 250px;
+  min-width: 250px;
+}
+
