--- a/src/main/resources/templates/admin/sales.html
+++ b/src/main/resources/templates/admin/sales.html
@@ -91,7 +91,7 @@
     
       <div class="content">
         <h2>매출관리</h2>
-        <div class="date">
+        <div class="date-container">
           <button>1주일</button>
           <button>1개월</button>
           <button>6개월</button>
