--- a/src/main/resources/templates/admin/manager.html
+++ b/src/main/resources/templates/admin/manager.html
@@ -11,8 +11,9 @@
   <section class="header">
     <div class="logo">
       <a href="/admin">
-          <img src="/images/logo.png" alt="Logo">
+          <img src="/images/고스트 코딩왕.png" alt="Logo">
       </a>
+      
     </div>
   
    
@@ -89,7 +90,7 @@
   
     <div class="content">
       <div class="title">
-        <h2>재고관리</h2>
+        <h1>재고관리</h1><br><br>
       </div>
   
       <div class="graph-box">
@@ -111,7 +112,7 @@
       </div>
   
       <div class="list">
-        <table border="1">
+        <table class="bookList">
           <thead>
             <tr>
               <th>책 번호</th>
