--- a/src/main/resources/templates/admin/query.html
+++ b/src/main/resources/templates/admin/query.html
@@ -12,7 +12,7 @@
   <section class="header">
     <div class="logo">
       <a href="/admin">
-          <img src="/images/logo.png" alt="Logo">
+          <img src="/images/고스트 코딩왕.png" alt="Logo">
       </a>
     </div>
   
