--- a/src/main/resources/templates/order/afterOrder.html
+++ b/src/main/resources/templates/order/afterOrder.html
@@ -1,60 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>결제 완료 페이지</title>
-  <link rel="stylesheet" href="/css/order/order.css">
-
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>주문 완료</title>
 </head>
 <body>
-  <section class="addressSection">
-    <div>
-      <h2>주문/ 배송 조회</h2>
-          <p>주문이 완료되었습니다</p>
-    </div>
-  </section>
+<main>
+    <h1>주문이 완료되었습니다!</h1>
 
-  <h4>주문 날짜       주문 번호</h4>
-  <!-- <div class="orderMainContainer">
-    <section>
-      <div>
-        <h2>주문 정보</h2>
-        <ul>
-          <li>주문 번호: <span th:text="${order.orderNo}"></span></li>
-          <li>주문 날짜: <span th:text="${order.orderDate}"></span></li>
-          <li>총 결제 금액: <span th:text="${order.totalPrice} + '원'"></span></li>
-          <li>배송 주소: <span th:text="${order.deliveryAddress}"></span></li>
-          <li>수령인: <span th:text="${order.receiver}"></span></li>
-        </ul>
-      </div>
-    
-      <div>
-        <h2>주문 상품 목록</h2>
-        <table>
-          <thead>
-            <tr>
-              <th>책 번호</th>
-              <th>책 제목</th>
-              <th>가격</th>
-              <th>수량</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr th:each="book : ${order.books}">
-              <td th:text="${book.bookNo}"></td>
-              <td th:text="${book.bookTitle}"></td>
-              <td th:text="${book.bookPrice} + '원'"></td>
-              <td th:text="${book.bookCount}"></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </section>
-  
-    
-  </div> -->
-  <script src="/static/js/order/afterOrder"></script> 
+    <h2>배송지 정보</h2>
+    <p>우편번호: <span th:text="${order.deliveryAddress.zip}"></span></p>
+    <p>주소: <span th:text="${order.deliveryAddress.address}"></span></p>
+    <p>상세 주소: <span th:text="${order.deliveryAddress.detailAddress}"></span></p>
+    <p>수령인: <span th:text="${order.deliveryAddress.receiver}"></span></p>
+    <p>전화번호: <span th:text="${order.deliveryAddress.tel}"></span></p>
+
+    <h2>주문 상품 목록</h2>
+    <table>
+        <thead>
+        <tr>
+            <th>상품명</th>
+            <th>수량</th>
+            <th>가격</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="item : ${order.books}">
+            <td th:text="${item.bookTitle}"></td>
+            <td th:text="${item.bookCount}"></td>
+            <td th:text="${item.bookPrice} + ' 원'"></td>
+        </tr>
+        </tbody>
+    </table>
+
+    <h3>총 결제 금액: <span th:text="${order.totalPrice} + ' 원'"></span></h3>
+</main>
 </body>
 </html>
